Copyrights and credits.

--- a/drafting.html
+++ b/drafting.html
@@ -313,6 +313,9 @@
 								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
 								the application icon by <a href="http://nuovext.pwsp.net/">Alexandre Moore</a>.
 						</p>
+						<p class="vc-creditsCode creditsCode">
+							The application is created with help of work by <a href="http://bassistance.de/jquery-plugins/jquery-plugin-autocomplete/">Jörn Zaefferer</a>.
+						</p>
 					<h2>Bugs &amp; features</h2>
 						<p class="vc-reportBugs">
 							Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
