Fixed small bug.

--- a/drafting.html
+++ b/drafting.html
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" type="text/css" href="css/jquery.autocomplete.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
 		<link rel="shortcut icon" href="img/ktimer.png">
-		<link rel="apple-touch-icon" href="img/ktimer-big.png" />
+		<link rel="apple-touch-icon" href="img/ktimer-big.png">
 	</head>
 	<body>
 		<table><tr><td><div id="content">
