First, important changes from the automatic creation.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>Akral/Drafting @ GitHub</title>
+	<meta charset="utf-8">
+	<title>Magic drafting judging application</title>
 	
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
   		background-color: #8c9fc9;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
+	  	font-family: Helvetica,Arial,FreeSans,sans-serif;
+  		color: black;
     }
     #container {
       margin: 0 auto;
@@ -34,19 +31,15 @@
 </head>
 
 <body>
-  <a href="http://github.com/Akral/Drafting"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+s  <a href="http://github.com/Akral/Drafting"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
-
     <div class="download">
-      <a href="http://github.com/Akral/Drafting/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/Akral/Drafting/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+		<a href="http://github.com/Akral/Drafting/downloads">Downloads</a>
     </div>
 
     <h1><a href="http://github.com/Akral/Drafting">Drafting</a>
-      <span class="small">by <a href="http://github.com/Akral">Akral</a></span></h1>
+      <span class="small">by <a href="http://github.com/Akral">Denis Sokolov</a></span></h1>
 
     <div class="description">
       Magic drafting judging application
@@ -56,12 +49,26 @@
 All those things can be confusing sometimes and this applications helps judges by automatizing the whole project.</p><h2>Install</h2>
 <p>Either [http://tools.sokolov.cc/drafting/ use online version], either [http://github.com/Akral/Drafting/downloads download it] in advance.
 If you choose to download it in advance, please come back here once in a while to check for new version releases.</p>
+
+<h2>Involvement</h2>
+<p>Want to help? There are many ways you can help:</p>
+<ul>
+  <li>Spread the word
+  <li><a href="http://github.com/Akral/Drafting/issues">Report bugs, request features, discuss</a>
+  <li>Help to write texts both here and in the application
+  <li>Translate the application
+  <li>Help code the application
+
+
 <h2>License</h2>
 <p>GPL v3</p>
 <h2>Authors</h2>
-<p>Denis Sokolov (denis@sokolov.cc)<br/><br/>      </p>
+<p>Denis Sokolov (denis@sokolov.cc)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Denis (denis@sokolov.cc)<br/>      </p>
+<p>Denis (denis@sokolov.cc)
+<br/>      </p>
 
 
     <h2>Download</h2>
