Added dynamic variables.

--- a/drafting.html
+++ b/drafting.html
@@ -81,12 +81,12 @@
 					<p class="appname">
 						Magic drafting application version
 							<span class="version"
-								title="Released on 2011-05-14">1.0</span>.
+								title="Released on {release-date}">1.0</span>.
 						<span title="The program is licensed under GPL 3">
-							<img src="img/copyleft.png" alt="Copyleft.">&nbsp;2011.
+							<img src="img/copyleft.png" alt="Copyleft.">&nbsp;{release-year}.
 						</span>
 						<a href="#end" title="[t-about]">[about]</a>.
-						<a href="http://code.google.com/p/magic-drafting-application/"
+						<a href="https://github.com/Akral/Drafting"
 							title="[t-homepage]"
 							>[homepage]</a>.
 					</p>
@@ -256,7 +256,7 @@
 				<div title="skipTimer">[skip-timer]</div>
 				<div title="5seconds">[5-seconds]</div>
 				<div title="10seconds">[10-seconds]</div>
-				<div title="langCode">[lang-code]</div>
+				<div title="langCode">{lang-code}</div>
 				<div title="passCards">[pass-cards]</div>
 				<div title="cardNumber">[card-number]</div>
 			</div>
