Updated about page.

--- a/drafting.html
+++ b/drafting.html
@@ -192,40 +192,45 @@
 				<li id="end">
 					<h1>[about-title]</h1>
 					<h2>Credits</h2>
-						<p class="vc-credits">
+						<p>
 							The program is written by
-							Denis Sokolov &mdash; a level 1 judge from Lithuania
+							Denis Sokolov &mdash; a level 2 judge from Lithuania
 							(<a href="http://sokolov.cc">homepage</a>).
 						</p>
-						<p class="vc-creditsSound creditsSound">
+						<p class="creditsSound">
 							The default sound pack is provided by
 								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
 								the application icon by <a href="http://nuovext.pwsp.net/">Alexandre Moore</a>.
 						</p>
-						<p class="vc-creditsCode creditsCode">
+						<p class="creditsCode">
 							The application is created with help of work by <a href="http://bassistance.de/jquery-plugins/jquery-plugin-autocomplete/">Jörn Zaefferer</a>.
 						</p>
-					<h2>Bugs &amp; features</h2>
-						<p class="vc-reportBugs">
-							Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
-								>report all problems</a> you will encounter
-								and <strong>be bold</strong> in doing so!
-							This will help us fix faster.
+						<p>
+							Icelandic translation made by Almar Halldorsson.
 						</p>
-						<p class="vc-offerFeatures">
+					<h2>Bugs &amp; features</h2>
+						<p>
+							Please report all problems you will encounter
+								and <strong>be bold</strong> in doing so!
+							This will help fix them faster.
+						</p>
+						<p>
 							If you&rsquo;d like to see a new feature in this
 								application,
-								<a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Feature%20request"
-								>just say so</a> and we will try to make it
-								happen!
+								just say so!
 						</p>
-						<p class="vc-contactEmail">
-							If you have problems using web service, please
-								contact us using this email:
-								<span class="email">drafting@sokolov.cc</span>.
+						<p>
+							You can contact me directly via email:
+								<span class="email">denis@sokolov.cc</span>.
+						</p>
+						<p>
+							Alternatively, if you use GitHub, feel free
+								to
+								<a href="https://github.com/Akral/Drafting/issues/new">create
+									issues there</a>.
 						</p>
 					<h2>Offline use</h2>
-						<p class="vc-offline1">
+						<p>
 							To save this application and use it offline, use
 								your browser&rsquo;s ‘File &rarr; Save Page’
 								function.
@@ -234,7 +239,7 @@
 								the same.
 						</p>
 					<p>
-						<a href="" class="vc-restartDraft">Restart the draft</a>.
+						<a href="">Restart the draft</a>.
 					</p>
 				</li>
 			</ul>
