--- a/drafting.html
+++ b/drafting.html
@@ -239,7 +239,7 @@
 								the same.
 						</p>
 					<p>
-						<a href="">Restart the draft</a>.
+						To restart the draft, reload the page.
 					</p>
 				</li>
 			</ul>
