About screen restructured, updated.

--- a/drafting.html
+++ b/drafting.html
@@ -190,25 +190,38 @@
 					<button>[finish]</button>
 				</li>
 				<li id="end">
-					<h1>[about-title]</h1>
+					<h1>About the program</h1>
+					<h2>Offline use</h2>
+						<p>
+							To save this application and use it offline, use
+								your browser&rsquo;s ‘File &rarr; Save Page’
+								function.
+							But please check back online sometimes, as it will
+								be updated, while your offline version will stay
+								the same.
+						</p>
 					<h2>Credits</h2>
 						<p>
 							The program is written by
-							Denis Sokolov &mdash; a level 2 judge from Lithuania
-							(<a href="http://sokolov.cc">homepage</a>).
-						</p>
-						<p class="creditsSound">
-							The default sound pack is provided by
-								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
-								the application icon by <a href="http://nuovext.pwsp.net/">Alexandre Moore</a>.
-						</p>
-						<p class="creditsCode">
-							The application is created with help of work by <a href="http://bassistance.de/jquery-plugins/jquery-plugin-autocomplete/">Jörn Zaefferer</a>.
+							<a href="http://sokolov.cc/">Denis Sokolov</a>&mdash;a&nbsp;level 2 judge from Lithuania.
 						</p>
 						<p>
 							Icelandic translation made by Almar Halldorsson.
 						</p>
-					<h2>Bugs &amp; features</h2>
+						<h3>Donations</h3>
+						<p>
+							Big thanks to Almar Halldorsson for his contribution
+								supporting the development of the program.
+						</p>
+						<h3>Third party attribution</h3>
+						<p>
+							The program uses works of 
+								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
+								<a href="http://nuovext.pwsp.net/">Alexandre Moore</a>
+								and
+								<a href="http://bassistance.de/jquery-plugins/jquery-plugin-autocomplete/">Jörn Zaefferer</a>.
+						</p>
+					<h2>Bugs and features</h2>
 						<p>
 							Please report all problems you will encounter
 								and <strong>be bold</strong> in doing so!
@@ -229,18 +242,6 @@
 								<a href="https://github.com/Akral/Drafting/issues/new">create
 									issues there</a>.
 						</p>
-					<h2>Offline use</h2>
-						<p>
-							To save this application and use it offline, use
-								your browser&rsquo;s ‘File &rarr; Save Page’
-								function.
-							But please check back online sometimes, as it will
-								be updated, while your offline version will stay
-								the same.
-						</p>
-					<p>
-						To restart the draft, reload the page.
-					</p>
 				</li>
 			</ul>
 			<div id="templates">
