Added language files convert script, updated texts.

--- a/drafting.html
+++ b/drafting.html
@@ -132,6 +132,7 @@
 					<p>[instructions-2] <span class="var-set1">SET</span>, <span class="var-set2">SET</span> [instructions-2-and] <span class="var-set3">SET</span>.</p>
 					<p>[instructions-3]</p>
 					<p>[instructions-4]</p>
+					<p>[instructions-4.5]</p>
 					<button>[continue]</button>
 				</li>
 				<li>
