--- a/drafting.html
+++ b/drafting.html
@@ -27,7 +27,10 @@
 		<link rel="stylesheet" type="text/css" href="css/jquery.autocomplete.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
 		<link rel="shortcut icon" href="img/ktimer.png">
-		<link rel="apple-touch-icon" href="img/ktimer-big.png">
+		<link rel="apple-touch-icon" href="img/ktimer-57.png">
+		<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	</head>
 	<body>
 		<table><tr><td><div id="content">
