--- a/drafting.html
+++ b/drafting.html
@@ -13,7 +13,7 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
+<html lang="{lang-code}">
 	<head>
 		<title>
 			[title]
