--- a/hosting-index.html
+++ b/hosting-index.html
@@ -40,6 +40,7 @@ ul { list-style-type: none }
 	a[href^="ru"] { background-image: url('flags/ru.png') }
 	a[href^="lt"] { background-image: url('flags/lt.png') }
 	a[href^="is"] { background-image: url('flags/is.png') }
+	a[href^="nl"] { background-image: url('flags/nl.png') }
 </style>
 
 <body>
@@ -50,6 +51,8 @@ ul { list-style-type: none }
 			<a href="ru.min.html">Открыть русскую версию</a>
 		<p>
 			<a href="is.min.html">Opin íslensk útgáfa</a>
+		<p>
+			<a href="nl.min.html">Open Nederlandse versie</a>
 		<p>
 			<a href="lt.min.html">Atidaryti lietuvišką versiją</a>
 	</div></td></tr></table>
