Offline explanation changed and moved to about screen completely.

--- a/drafting.html
+++ b/drafting.html
@@ -94,10 +94,6 @@
 							>[homepage]</a>.
 					</p>
 				</li>
-				<li>
-					<p>[offline-notice]</p>
-					<button>[noted]</button>
-				</li>
 				<li id="settings">
 					<h1>[settings]</h1>
 					<p>
@@ -202,9 +198,11 @@
 							To save this application and use it offline, use
 								your browser&rsquo;s ‘File &rarr; Save Page’
 								function.
-							But please check back online sometimes, as it will
-								be updated, while your offline version will stay
-								the same.
+						</p>
+						<h3>iPhone/iPad</h3>
+						<p>
+							On iOS you can &lsquo;add to homepage&rsquo;
+								the application and it will be available offline.
 						</p>
 					<h2>Credits</h2>
 						<p>
