Update GitHub links

--- a/drafting.html
+++ b/drafting.html
@@ -89,7 +89,7 @@
 							<img src="img/copyleft.png" alt="Copyleft.">&nbsp;{release-year}.
 						</span>
 						<a href="#end" title="[t-about]">[about]</a>.
-						<a href="https://github.com/Akral/Drafting"
+						<a href="https://github.com/denis-sokolov/Drafting"
 							title="[t-homepage]"
 							>[homepage]</a>.
 					</p>
@@ -113,7 +113,7 @@
 					<p id="soundsNotFound" class="warning">
 						([setting-sounds-notfound]
 						<a
-							href="https://github.com/Akral/PyHtmlify/wiki/Sounds"
+							href="https://github.com/denis-sokolov/PyHtmlify/wiki/Sounds"
 							>[setting-sounds-download]</a>
 						[setting-sounds-restart].)
 					</p>
@@ -219,7 +219,7 @@
 						</p>
 						<h3>Third party attribution</h3>
 						<p>
-							The program uses works of 
+							The program uses works of
 								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
 								<a href="http://nuovext.pwsp.net/">Alexandre Moore</a>
 								and
@@ -243,7 +243,7 @@
 						<p>
 							Alternatively, if you use GitHub, feel free
 								to
-								<a href="https://github.com/Akral/Drafting/issues/new">create
+								<a href="https://github.com/denis-sokolov/Drafting/issues/new">create
 									issues there</a>.
 						</p>
 				</li>
